# github_fucking_sucks

./: .gitmodules  CMakeLists.txt  CSR.cpp  README.md  a.out  arrow10.mtx  arrow8.mtx  job816  omp.cpp  works.txt
